--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                             <a href="ungvien-2015.html" title="Năm 2015" target=""><span>Năm 2015</span></a>
                         </li>
                         <li class="" onclick="javascript:void(0);">
-                            <a href="http://hoahauhoanvuvietnam.com/Candidates55a9.html?year=2017" title="Năm 2017" target=""><span>Năm 2017</span></a>
+                            <a href="ungvien-2017.html" title="Năm 2017" target=""><span>Năm 2017</span></a>
                         </li>
                     </ul>
                 </li>
@@ -481,7 +481,7 @@
                 <div class="wrap-inner">
                     <div id="ctl00_body_divContentCandidates">
                         <div class="box-person contestants">
-                            <a class="title-link dark" href="http://hoahauhoanvuvietnam.com/Candidates55a9.html?year=2017" title="Thí sinh">
+                            <a class="title-link dark" href="ungvien-2017.html" title="Thí sinh">
                                 <h4 class="title">Thí sinh</h4>
                             </a>
                             <div class="box clear-both">
