--- a/ungvien-2017.html
+++ b/ungvien-2017.html
@@ -72,7 +72,7 @@
     <div id="mdl-top-head">
         <div class="container">
             <a href="index.html" class="left" title="Trang chủ">
-                <img src="images/logocdd7.png?v=201708180159" alt="Hoa hậu Hoàn vũ Việt Nam">
+                <img src="Images/logocdd7.png?v=201708180159" alt="Hoa hậu Hoàn vũ Việt Nam">
             </a>
             <div class="right">
                 <span></span>
@@ -80,13 +80,13 @@
                     <li>
                         <a onclick="SwitchLanguage('ctl00_body_Header1_Language1_lbtVietnamese')"
                            href="javascript:void(0);" title="Tiếng Việt">
-                            <img src="images/vn.png" alt="Tiếng Việt">
+                            <img src="Images/vn.png" alt="Tiếng Việt">
                         </a>
                     </li>
                     <li>
                         <a onclick="SwitchLanguage('ctl00_body_Header1_Language1_lbtEnglish')"
                            href="javascript:void(0);" title="English">
-                            <img src="images/en.png" alt="English">
+                            <img src="Images/en.png" alt="English">
                         </a>
                     </li>
 
@@ -128,13 +128,13 @@
             <ul class="list-unstyled list-inline menu">
                 <li class="wrap-logo">
                     <a href="index.html" title="Trang chủ">
-                        <img src="images/miss-universe-child-page.png" alt="Hoa hậu Hoàn vũ Việt Nam"
+                        <img src="Images/miss-universe-child-page.png" alt="Hoa hậu Hoàn vũ Việt Nam"
                              class="img-responsive">
                     </a>
                 </li>
 
                 <li class="" onclick="javascript:void(0);">
-                    <a href="default.html" title="Trang chủ" target=""><span>Trang chủ</span></a>
+                    <a href="index.html" title="Trang chủ" target=""><span>Trang chủ</span></a>
 
                 </li>
                 <li class="sub-menu-content" onclick="SubMenuOpenToggle(this);">
@@ -206,15 +206,15 @@
                     </ul>
                 </li>
                 <li class="sub-menu-content" onclick="SubMenuOpenToggle(this);">
-                    <a href="Candidates.html" title="Ứng viên" target=""><span>Ứng viên</span></a>
+                    <a href="#" title="Ứng viên" target=""><span>Ứng viên</span></a>
 
                     <ul class="list-unstyled sub-menu">
                         <li class="" onclick="javascript:void(0);">
-                            <a href="Candidates2495.html?year=2015" title="Năm 2015" target=""><span>Năm 2015</span></a>
+                            <a href="ungvien-2015.html" title="Năm 2015" target=""><span>Năm 2015</span></a>
 
                         </li>
                         <li class="" onclick="javascript:void(0);">
-                            <a href="Candidates55a9.html?year=2017" title="Năm 2017" target=""><span>Năm 2017</span></a>
+                            <a href="ungvien-2017.html" title="Năm 2017" target=""><span>Năm 2017</span></a>
 
                         </li>
                     </ul>
@@ -281,7 +281,7 @@
                                onclick="js_fw.open_popup({rel:'#pop-user',width:400,open:function(){$('#pop-user #pop-login').css({display:'none'})},afterClose:function(){$('#pop-user #pop-register,#pop-user #pop-login').css({display:'block'})}})">Sign
                                 up</a>
                         </li>
-                        <li class="logined" data-img="images/ic-user.png">
+                        <li class="logined" data-img="Images/ic-user.png">
                             <a href="javascript:void(0);" class="user"></a>
                             <div class="wrap-sub-user">
                                 <ul class="sub-user list-unstyled">
@@ -328,7 +328,7 @@
                 <div class="col-md-3">
                     <div class="box-ts">
                         <div class="box-ts-img">
-                            <a href="lam-que-phi.html"><img src="images/ts2017/a.jpg" alt=""></a>
+                            <a href="lam-que-phi.html"><img src="Images/ts2017/a.jpg" alt=""></a>
                         </div>
                         <div class="box-ts-text">
                             <span class="name">Hoàng Thị Hạnh<br><label
@@ -339,7 +339,7 @@
                 <div class="col-md-3">
                     <div class="box-ts">
                         <div class="box-ts-img">
-                            <a href="lam-que-phi.html"><img src="images/ts2017/b.jpg" alt=""></a>
+                            <a href="lam-que-phi.html"><img src="Images/ts2017/b.jpg" alt=""></a>
                         </div>
                         <div class="box-ts-text">
                             <span class="name">Hoàng Thu Trang<br><label
@@ -350,7 +350,7 @@
                 <div class="col-md-3">
                     <div class="box-ts">
                         <div class="box-ts-img">
-                            <a href="lam-que-phi.html"><img src="images/ts2017/c.jpg" alt=""></a>
+                            <a href="lam-que-phi.html"><img src="Images/ts2017/c.jpg" alt=""></a>
                         </div>
                         <div class="box-ts-text">
                             <span class="name">Nguyễn Thu Hương<br><label
@@ -361,7 +361,7 @@
                 <div class="col-md-3">
                     <div class="box-ts">
                         <div class="box-ts-img">
-                            <a href="lam-que-phi.html"><img src="images/ts2017/d.jpg" alt=""></a>
+                            <a href="lam-que-phi.html"><img src="Images/ts2017/d.jpg" alt=""></a>
                         </div>
                         <div class="box-ts-text">
                             <span class="name">Phạm Quỳnh Trang<br><label
@@ -372,7 +372,7 @@
                 <div class="col-md-3">
                     <div class="box-ts">
                         <div class="box-ts-img">
-                            <a href="lam-que-phi.html"><img src="images/ts2017/e.jpg" alt=""></a>
+                            <a href="lam-que-phi.html"><img src="Images/ts2017/e.jpg" alt=""></a>
                         </div>
                         <div class="box-ts-text">
                             <span class="name">Hoàng Thu Quỳnh<br><label
@@ -383,7 +383,7 @@
                 <div class="col-md-3">
                     <div class="box-ts">
                         <div class="box-ts-img">
-                            <a href="lam-que-phi.html"><img src="images/ts2017/f.jpg" alt=""></a>
+                            <a href="lam-que-phi.html"><img src="Images/ts2017/f.jpg" alt=""></a>
                         </div>
                         <div class="box-ts-text">
                             <span class="name">Hoàng Xuân Hoa<br><label
@@ -394,7 +394,7 @@
                 <div class="col-md-3">
                     <div class="box-ts">
                         <div class="box-ts-img">
-                            <a href="lam-que-phi.html"><img src="images/ts2017/m.jpg" alt=""></a>
+                            <a href="lam-que-phi.html"><img src="Images/ts2017/m.jpg" alt=""></a>
                         </div>
                         <div class="box-ts-text">
                             <span class="name">Hoàng Hồng Vân<br><label
@@ -405,7 +405,7 @@
                 <div class="col-md-3">
                     <div class="box-ts">
                         <div class="box-ts-img">
-                            <a href="lam-que-phi.html"><img src="images/ts2017/l.jpg" alt=""></a>
+                            <a href="lam-que-phi.html"><img src="Images/ts2017/l.jpg" alt=""></a>
                         </div>
                         <div class="box-ts-text">
                             <span class="name">Vũ Anh Thư<br><label
@@ -416,7 +416,7 @@
                 <div class="col-md-3">
                     <div class="box-ts">
                         <div class="box-ts-img">
-                            <a href="lam-que-phi.html"><img src="images/ts2017/k.jpg" alt=""></a>
+                            <a href="lam-que-phi.html"><img src="Images/ts2017/k.jpg" alt=""></a>
                         </div>
                         <div class="box-ts-text">
                             <span class="name">Hoàng Thị Hồng<br><label
@@ -427,7 +427,7 @@
                 <div class="col-md-3">
                     <div class="box-ts">
                         <div class="box-ts-img">
-                            <a href="lam-que-phi.html"><img src="images/ts2017/b.jpg" alt=""></a>
+                            <a href="lam-que-phi.html"><img src="Images/ts2017/b.jpg" alt=""></a>
                         </div>
                         <div class="box-ts-text">
                             <span class="name">Hoàng Thu Huyền<br><label
@@ -438,7 +438,7 @@
                 <div class="col-md-3">
                     <div class="box-ts">
                         <div class="box-ts-img">
-                            <a href="lam-que-phi.html"><img src="images/ts2017/c.jpg" alt=""></a>
+                            <a href="lam-que-phi.html"><img src="Images/ts2017/c.jpg" alt=""></a>
                         </div>
                         <div class="box-ts-text">
                             <span class="name">Hoàng Thị Trang<br><label
@@ -449,7 +449,7 @@
                 <div class="col-md-3">
                     <div class="box-ts">
                         <div class="box-ts-img">
-                            <a href="lam-que-phi.html"><img src="images/ts2017/e.jpg" alt=""></a>
+                            <a href="lam-que-phi.html"><img src="Images/ts2017/e.jpg" alt=""></a>
                         </div>
                         <div class="box-ts-text">
                             <span class="name">Hoàng Thị Hạnh<br><label
@@ -717,7 +717,7 @@
                     </div>
                 </div>
                 <a href="index.html" class="logo-footer" title="Trang chủ">
-                    <img src="images/logocdd7.png?v=201708180159" alt="Hoa hậu Hoàn vũ Việt Nam">
+                    <img src="Images/logocdd7.png?v=201708180159" alt="Hoa hậu Hoàn vũ Việt Nam">
                 </a>
             </div>
         </div>
