--- a/lien-he-quang-cao.html
+++ b/lien-he-quang-cao.html
@@ -153,7 +153,7 @@
                             <a href="ungvien-2015.html" title="Năm 2015" target=""><span>Năm 2015</span></a>
                         </li>
                         <li class="" onclick="javascript:void(0);">
-                            <a href="http://hoahauhoanvuvietnam.com/Candidates55a9.html?year=2017" title="Năm 2017" target=""><span>Năm 2017</span></a>
+                            <a href="ungvien-2017.html" title="Năm 2017" target=""><span>Năm 2017</span></a>
                         </li>
                     </ul>
                 </li>
