--- a/RootPhoto.html
+++ b/RootPhoto.html
@@ -181,7 +181,7 @@
                                     
                                 </li>
                                 <li class="" onclick="javascript:void(0);">
-                                    <a href="giai-dap-thac-mac-hoa-hau-hoan-vu-viet-nam-2017" title="Giải đáp thắc mắc" target=""><span>Giải đáp thắc mắc</span></a>
+                                    <a href="giai-dap-thac-mac-hoa-hau-hoan-vu-viet-nam-2017.html" title="Giải đáp thắc mắc" target=""><span>Giải đáp thắc mắc</span></a>
                                     
                                 </li>
                                 <li class="" onclick="javascript:void(0);">
