--- a/ungvien-2015.html
+++ b/ungvien-2015.html
@@ -209,11 +209,11 @@
 
                     <ul class="list-unstyled sub-menu">
                         <li class="" onclick="javascript:void(0);">
-                            <a href="Candidates2495.html?year=2015" title="Năm 2015" target=""><span>Năm 2015</span></a>
+                            <a href="ungvien-2015.html" title="Năm 2015" target=""><span>Năm 2015</span></a>
 
                         </li>
                         <li class="" onclick="javascript:void(0);">
-                            <a href="Candidates55a9.html?year=2017" title="Năm 2017" target=""><span>Năm 2017</span></a>
+                            <a href="ungvien-2017.html" title="Năm 2017" target=""><span>Năm 2017</span></a>
 
                         </li>
                     </ul>
