--- a/ungvien-2017.html
+++ b/ungvien-2017.html
@@ -153,12 +153,12 @@
 
                         </li>
                         <li class="" onclick="javascript:void(0);">
-                            <a href="vong-ban-ket-hoa-hau-hoan-vu-viet-nam.html"
+                            <a href="vong-ban-ket-hoa-hau-hoan-vu-viet-nam-2017.html"
                                title="Vòng Bán kết" target=""><span>Vòng Bán kết</span></a>
 
                         </li>
                         <li class="" onclick="javascript:void(0);">
-                            <a href="vong-chung-ket-hoa-hau-hoan-vu-viet-nam.html"
+                            <a href="vong-chung-ket-hoa-hau-hoan-vu-viet-nam-2017.html"
                                title="Vòng Chung kết" target=""><span>Vòng Chung kết</span></a>
 
                         </li>
@@ -195,7 +195,7 @@
 
                         </li>
                         <li class="" onclick="javascript:void(0);">
-                            <a href="giai-dap-thac-mac-hoa-hau-hoan-vu-viet-nam.html"
+                            <a href="giai-dap-thac-mac-hoa-hau-hoan-vu-viet-nam-2017.html"
                                title="Giải đáp thắc mắc" target=""><span>Giải đáp thắc mắc</span></a>
 
                         </li>
@@ -220,7 +220,7 @@
                     </ul>
                 </li>
                 <li class="" onclick="javascript:void(0);">
-                    <a href="NewsPage.html" title="Tin tức" target=""><span>Tin tức</span></a>
+                    <a href="tin-tuc.html" title="Tin tức" target=""><span>Tin tức</span></a>
 
                 </li>
                 <li class="sub-menu-content" onclick="SubMenuOpenToggle(this);">
@@ -242,16 +242,16 @@
 
                     <ul class="list-unstyled sub-menu">
                         <li class="" onclick="javascript:void(0);">
-                            <a href="thong-tin-dat-ve-dem-ban-ket-va-chung-ket-hoa-hau-hoan-vu-viet-nam.html"
+                            <a href="thong-tin-dat-ve-dem-ban-ket-va-chung-ket-hoa-hau-hoan-vu-viet-nam-2017.html"
                                title="Thông tin đặt vé" target="_blank"><span>Thông tin đặt vé</span></a>
 
                         </li>
                         <li class="" onclick="javascript:void(0);">
-                            <a href="BookTicket17d5.html?round=semifinal" title="Vòng Bán kết" target=""><span>Vòng Bán kết</span></a>
+                            <a href="http://hoahauhoanvuvietnam.com/BookTicket17d5.html?round=semifinal" title="Vòng Bán kết" target=""><span>Vòng Bán kết</span></a>
 
                         </li>
                         <li class="" onclick="javascript:void(0);">
-                            <a href="BookTicket6e24.html?round=final" title="Vòng Chung kết" target=""><span>Vòng Chung kết</span></a>
+                            <a href="http://hoahauhoanvuvietnam.com/BookTicket6e24.html?round=final" title="Vòng Chung kết" target=""><span>Vòng Chung kết</span></a>
 
                         </li>
                     </ul>
